<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:stretchColumns="1"> 
<TableRow>
<TextView
android:id="@+id/txtMain"
android:layout_width="0dip"
android:layout_height="wrap_content"
android:paddingLeft="5dip"
android:paddingTop="10dip"
android:layout_weight="1"
android:text="@string/main1" />
</TableRow>
<TableRow>
<TextView
android:id="@+id/txtMain1"
android:layout_width="0dip"
android:layout_height="wrap_content"
android:paddingLeft="5dip"
android:paddingBottom="10dip"
android:layout_weight="1"
android:text="@string/main2" />
</TableRow>
<TableRow>
<ImageView
        android:id="@+id/imgProfile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/vslogo" 
        android:contentDescription="@string/kn_profile_img"
    android:paddingLeft="15pt"/>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
    <TableRow android:paddingLeft="10pt">
        <Button android:id="@+id/btnProfile"
            android:text="@string/my_profile" 
            android:hint="@string/my_profile"
            android:height="12dp"
           />
    </TableRow>
    <TableRow android:paddingLeft="10pt">
         <Button android:id="@+id/btnService"
            android:text="@string/my_service" 
            android:hint="@string/my_service" 
            android:height="12dp"
            />
    </TableRow>    
     <TableRow android:paddingLeft="10pt">
         <Button android:id="@+id/btnPhone"
            android:text="@string/my_phone" 
            android:hint="@string/my_phone" 
            android:height="12dp" />
    </TableRow> 
</TableLayout>
</TableRow>
<TableRow>
<TextView
android:id="@+id/txtMain3"
android:layout_width="0dip"
android:layout_height="wrap_content"
android:paddingLeft="5dip"
android:paddingTop="10dip"
android:layout_weight="1"
android:text="@string/main3" />
</TableRow>
<TableRow>
<TextView
android:id="@+id/txtMain4"
android:layout_width="0dip"
android:layout_height="wrap_content"
android:paddingLeft="5dip"
android:paddingTop="10dip"
android:layout_weight="1"
android:text="@string/main4" />
</TableRow>
<TableRow>
<View   
     android:layout_width="match_parent"   
     android:layout_height="1pt"    
     android:background="#e0e0e0"/> 
     <View   
     android:layout_width="match_parent"   
     android:layout_height="1pt"    
     android:background="#e0e0e0"/> 
     <View   
     android:layout_width="match_parent"   
     android:layout_height="1pt"    
     android:background="#e0e0e0"/> 
</TableRow>
<TableRow android:paddingLeft="5pt" 
    android:paddingRight="5pt">
    <TextView
android:id="@+id/txtSmall"
android:layout_width="0dip"
android:layout_height="wrap_content"
android:layout_weight="1"
android:text="@string/copp" 
android:textStyle="bold"    
style = "@android:style/TextAppearance.Small" 
/>
</TableRow>
</TableLayout>
</ScrollView>

